// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`translation build should build every language 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Building translation <resources>/translations, language - all, sorted - true",
    "Building dir <resources>/translations",
    "Building JSON based translations <resources>/translations/st_items.json",
    "Copy static XML translations <resources>/translations/st_shared.xml",
    "Building XML based translations <resources>/translations/st_ui.eng.xml",
    "Building XML based translations <resources>/translations/st_ui.rus.xml",
    "Built translation files in <duration>",
  ],
}
`;

exports[`translation build should build one language when asked 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Building translation <resources>/translations, language - eng, sorted - true",
    "Building dir <resources>/translations",
    "Building JSON based translations <resources>/translations/st_items.json",
    "Copy static XML translations <resources>/translations/st_shared.xml",
    "Building XML based translations <resources>/translations/st_ui.eng.xml",
    "Building XML based translations <resources>/translations/st_ui.rus.xml",
    "Built translation files in <duration>",
  ],
}
`;

exports[`translation build should build without sorting 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Building translation <resources>/translations, language - all, sorted - false",
    "Building dir <resources>/translations",
    "Building JSON based translations <resources>/translations/st_items.json",
    "Copy static XML translations <resources>/translations/st_shared.xml",
    "Building XML based translations <resources>/translations/st_ui.eng.xml",
    "Building XML based translations <resources>/translations/st_ui.rus.xml",
    "Built translation files in <duration>",
  ],
}
`;

exports[`translation build should write the expected files 1`] = `
[
  {
    "path": "all/eng/st_items.xml",
    "sha256": "daa924e9eb3b36bdd9a4d38914e20d150673cd00cfe9cafc1bc2a4a2cfc7e47c",
    "size": 210,
  },
  {
    "path": "all/eng/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "all/eng/st_ui.xml",
    "sha256": "0c255423896df871d95248f74dc35a2a1deed5ffc0d192614a3b9cdc0f02ef14",
    "size": 147,
  },
  {
    "path": "all/fra/st_items.xml",
    "sha256": "adb25f43b57f121d59c01c9ae25d75e8c91c2b45cb83116184049945b290b038",
    "size": 226,
  },
  {
    "path": "all/fra/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "all/ger/st_items.xml",
    "sha256": "ea3d9202daf832cb1dd5f46f16f40ef0661396207747dbbb77afce40e647e0f5",
    "size": 226,
  },
  {
    "path": "all/ger/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "all/ita/st_items.xml",
    "sha256": "adb25f43b57f121d59c01c9ae25d75e8c91c2b45cb83116184049945b290b038",
    "size": 226,
  },
  {
    "path": "all/ita/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "all/pol/st_items.xml",
    "sha256": "ea3d9202daf832cb1dd5f46f16f40ef0661396207747dbbb77afce40e647e0f5",
    "size": 226,
  },
  {
    "path": "all/pol/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "all/rus/st_items.xml",
    "sha256": "22f42fefe077568f4f36b8c633477c106d52d2a54adff429eda2e942e4f689db",
    "size": 210,
  },
  {
    "path": "all/rus/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "all/rus/st_ui.xml",
    "sha256": "8db1cd4d626e2b472c3a2f6a7dda2d918d2e9cf85797d2e78140681787d02a44",
    "size": 148,
  },
  {
    "path": "all/spa/st_items.xml",
    "sha256": "adb25f43b57f121d59c01c9ae25d75e8c91c2b45cb83116184049945b290b038",
    "size": 226,
  },
  {
    "path": "all/spa/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "all/ukr/st_items.xml",
    "sha256": "85ab0dbf93d19c60a2ef9bef413488cda024ff20da8d9b4973a023419f5243d4",
    "size": 217,
  },
  {
    "path": "all/ukr/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "eng/eng/st_items.xml",
    "sha256": "daa924e9eb3b36bdd9a4d38914e20d150673cd00cfe9cafc1bc2a4a2cfc7e47c",
    "size": 210,
  },
  {
    "path": "eng/eng/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "eng/eng/st_ui.xml",
    "sha256": "0c255423896df871d95248f74dc35a2a1deed5ffc0d192614a3b9cdc0f02ef14",
    "size": 147,
  },
  {
    "path": "unsorted/eng/st_items.xml",
    "sha256": "8d17e94efde02c833cae0e4abae8e0577cadcacd89f71994457815a9781e18c4",
    "size": 210,
  },
  {
    "path": "unsorted/eng/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "unsorted/eng/st_ui.xml",
    "sha256": "0c255423896df871d95248f74dc35a2a1deed5ffc0d192614a3b9cdc0f02ef14",
    "size": 147,
  },
  {
    "path": "unsorted/fra/st_items.xml",
    "sha256": "e64727a573c1565f8ddf49495337706d7bc5306d527cb3d1ab072b1f32ee67c6",
    "size": 226,
  },
  {
    "path": "unsorted/fra/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "unsorted/ger/st_items.xml",
    "sha256": "1fb1ce9157c47071c6ad5969d18a791f5907c02fd878a4518e4f0a70a9e662c4",
    "size": 226,
  },
  {
    "path": "unsorted/ger/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "unsorted/ita/st_items.xml",
    "sha256": "e64727a573c1565f8ddf49495337706d7bc5306d527cb3d1ab072b1f32ee67c6",
    "size": 226,
  },
  {
    "path": "unsorted/ita/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "unsorted/pol/st_items.xml",
    "sha256": "1fb1ce9157c47071c6ad5969d18a791f5907c02fd878a4518e4f0a70a9e662c4",
    "size": 226,
  },
  {
    "path": "unsorted/pol/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "unsorted/rus/st_items.xml",
    "sha256": "a95b924009113548c486b82a211db6a11200d48281698ccd15dc7da5b060a9f4",
    "size": 210,
  },
  {
    "path": "unsorted/rus/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "unsorted/rus/st_ui.xml",
    "sha256": "8db1cd4d626e2b472c3a2f6a7dda2d918d2e9cf85797d2e78140681787d02a44",
    "size": 148,
  },
  {
    "path": "unsorted/spa/st_items.xml",
    "sha256": "e64727a573c1565f8ddf49495337706d7bc5306d527cb3d1ab072b1f32ee67c6",
    "size": 226,
  },
  {
    "path": "unsorted/spa/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
  {
    "path": "unsorted/ukr/st_items.xml",
    "sha256": "7801c05a63f747d9691ddec70ce0c56be5b5c763309a6bc94ea9e92d55c48180",
    "size": 217,
  },
  {
    "path": "unsorted/ukr/st_shared.xml",
    "sha256": "6f6a8ad26c80dcb9ea7d65263f3cfd148ec6f65806b85aeb0b504697de00fa6e",
    "size": 144,
  },
]
`;
